Improved image styling - no longer stretching them to 100% width.

--- a/themes/hyper/static/css/style.css
+++ b/themes/hyper/static/css/style.css
@@ -133,7 +133,9 @@ div.post-meta {
 }
 
 .post-content img {
-  width: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   max-width: 100%;
   image-rendering: crisp-edges;
   image-rendering: pixelated;
